--- a/_config.yml
+++ b/_config.yml
@@ -14,14 +14,15 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Ombre d'abre # the main title
+title: Está bom # the main title
 
 tagline: Life is water 🌊 | My Daily Life. 
          human, traveler of life, shy person, newbie of society. 
+         
          일상 이야기를 주로 합니다. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  My Daily Life.
+  Daily, blog, Life, travel, story, diary, 일상, 블로그, 여행, 이야기, 다이어리
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -40,10 +41,10 @@ social:
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://x.com/Eine_Kleine_Koe # change to your Twitter homepage
+    # https://github.com/username # change to your GitHub homepage
     # Uncomment below to add more social links
-    # - https://www.facebook.com/username
+    - https://linktr.ee/esta.bom
     # - https://www.linkedin.com/in/username
 
 # Site Verification Settings
