--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  # name: your_full_name
+  # email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://x.com/Eine_Kleine_Koe # change to your Twitter homepage
@@ -101,7 +101,7 @@ theme_mode: # [light | dark]
 cdn: "https://chirpy-img.netlify.app"
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/commons/avatar.jpg"
+avatar: "/estabom.github.io/IMG_1833.jpg"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
