--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ timezone: Asia/Seoul
 
 title: Está bom # the main title
 
-tagline: Life is water 🌊 | My Daily Life. 
-         human, traveler of life, 
-         shy person, newbie of society. 
+tagline:  Life is water 🌊 | My Daily Life. 
+         | human, traveler of life, 
+         | shy person, newbie of society. 
          
          일상 이야기를 주로 합니다. # it will display as the subtitle
 
