--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ tagline:  Life is water 🌊 | My Daily Life.
          | human, traveler of life, 
          | shy person, newbie of society. 
          
-         일상 이야기를 주로 합니다. # it will display as the subtitle
+         | 일상 이야기를 주로 합니다. # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   Daily, blog, Life, travel, story, diary, 일상, 블로그, 여행, 이야기, 다이어리
