--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ webmaster_verifications:
 # Web Analytics Settings
 analytics:
   google:
-    id: G-FWW45W0X6J # fill in your Google Analytics ID
+    id: "G-FWW45W0X6J" # fill in your Google Analytics ID
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
